Date & Time added.

--- a/3-JS/js-descriptions.html
+++ b/3-JS/js-descriptions.html
@@ -232,38 +232,42 @@
             <li><b>Mantıksal Operatörler </b><i></i></li>
             <p>
                 <b>&& (and) </b><i>(birden fazla değerin sonucunun ayrı ayrı değil tek olarak alınması)</i><br>
-                    <br>
-                    // true && true = true <br>
-                    // true && false = false <br>
-                    // false && false = false <br>
-                    <br>
-                    val = a > b // true <br>
-                    val = a > c // true <br>
-                    val = (a > b) && (a > c) // true <br>
+                <br>
+                // true && true = true <br>
+                // true && false = false <br>
+                // false && false = false <br>
+                <br>
+                val = a > b // true <br>
+                val = a > c // true <br>
+                val = (a > b) && (a > c) // true <br>
                 <br>
                 <b>|| (or) </b><i>(birden fazla değerden herhangi birisinin sonucunun alınması)</i><br>
-                    <br>
-                    // true && true = true <br>
-                    // true && false = true <br>
-                    // false && false = false <br>
-                    <br>
-                    val = a > b // true <br>
-                    val = a > c // true <br>
-                    val = (a > b) || (a > c) // true <br>
+                <br>
+                // true && true = true <br>
+                // true && false = true <br>
+                // false && false = false <br>
+                <br>
+                val = a > b // true <br>
+                val = a > c // true <br>
+                val = (a > b) || (a > c) // true <br>
                 <br>
                 <b>! (not) </b><i>(ters değer alınması)</i><br>
-                    <br>
-                    // !true = false <br>
-                    // !false = true <br>
-                    <br>
-                    val = a > b // true <br>
-                    val = a > c // true <br>
-                    val = !(a > b) // false
-            </ul>
+                <br>
+                // !true = false <br>
+                // !false = true <br>
+                <br>
+                val = a > b // true <br>
+                val = a > c // true <br>
+                val = !(a > b) // false
+                </ul>
             </p>
         </ol>
         </p>
     </details><br>
+    <details TARİHLER VE ZAMANLAR (dates & times)>
+        <summary><b>TARİHLER VE ZAMANLAR (dates & times)</b></summary>
+        <p></p>
+    </details>
 </body>
 
 </html>
