--- a/3-JS/js-descriptions.html
+++ b/3-JS/js-descriptions.html
@@ -295,13 +295,13 @@
                 </li>
                 <br>
                 <ul type="circle">
-                    .setMilliseconds(10); <br>
-                    .setSeconds(20); <br>
-                    .setMinutes(30); <br>
-                    .setHours(8); <br>
-                    .setDate(20); <br>
-                    .setMonth(5); <br>
-                    .setFullYear(2020); <br>
+                    tarih.setMilliseconds(10); <br>
+                    tarih.setSeconds(20); <br>
+                    tarih.setMinutes(30); <br>
+                    tarih.setHours(8); <br>
+                    tarih.setDate(20); <br>
+                    tarih.setMonth(5); <br>
+                    tarih.setFullYear(2020); <br>
                 </ul>
             </ul><br>
             <br>
