--- a/2-CSS/css-descriptions.html
+++ b/2-CSS/css-descriptions.html
@@ -936,6 +936,8 @@
                 <br>
                 <i>.item:first-child {}</i>
                 <ul type="disc">
+                    <li><b>grid-column :</b><i> 2 / 4</i> (başlangıç ve bitiş kolonu)</li>
+                    <li><b>grid-row :</b><i> 1 / 5</i> (başlangıç ve bitiş satırı)</li>
                     <li><b>grid-column-start :</b><i> 2</i> (başlangıç kolonu)</li>
                     <li><b>grid-column-end :</b><i> 4</i> (bitiş kolonu)</li>
                     <li><b>grid-row-start :</b><i> 1</i> (başlangıç satırı)</li>
