--- a/2-CSS/css-descriptions.html
+++ b/2-CSS/css-descriptions.html
@@ -938,10 +938,14 @@
                 <ul type="disc">
                     <li><b>grid-column :</b><i> 2 / 4</i> (başlangıç ve bitiş kolonu)</li>
                     <li><b>grid-row :</b><i> 1 / 5</i> (başlangıç ve bitiş satırı)</li>
+                    <li><b>grid-column :</b><i> 2 / span 4</i> (4 kolon kaplar)</li>
+                    <li><b>grid-row :</b><i> 1 / span 5</i> (4 satır kaplar)</li>
                     <li><b>grid-column-start :</b><i> 2</i> (başlangıç kolonu)</li>
                     <li><b>grid-column-end :</b><i> 4</i> (bitiş kolonu)</li>
                     <li><b>grid-row-start :</b><i> 1</i> (başlangıç satırı)</li>
                     <li><b>grid-row-end :</b><i> 5</i> (bitiş satırı)</li>
+                    <li><b>grid-area :</b><i> 1 / 1 / 4 / 5</i> (1. satır ve 1. kolondan başla - 4. satır ve 5. kolonda bitir)</li>
+                    <li><b>grid-area :</b><i> 1 / 1 / span 4 / span 5</i> (1. satır ve 1. kolondan başla - 4. satır ve 5. kolonda bitir)</li>
                 </ul>
                 </p>
             </details>
